--- a/StockAnalysis/UserInfo/FeedBack/FeedbackEditVC.xib
+++ b/StockAnalysis/UserInfo/FeedBack/FeedbackEditVC.xib
@@ -165,6 +165,9 @@
                     <state key="normal" title="提交">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="clickCommit:" destination="-1" eventType="touchUpInside" id="ng3-Gu-VjZ"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
